--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,9 @@
-<!-- بداية الملف index.html -->
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>STORE 父King个ESPORTSツ</title>
+  <title>STORE King个ESPORTSツ</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
   <style>
     body {
@@ -85,15 +84,39 @@
     .contact {
       margin-top: 40px;
     }
-  </style>
+    
+
+  .clan-link-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+
+  .clan-link {
+    color: white;
+    font-size: 24px;
+    text-decoration: none;
+    font-weight: bold;
+  }
+
+  .clan-link:hover {
+    text-decoration: underline;
+  }
+</style>
+
 </head>
 <body>
 
-<h2>STORE 父King个ESPORTSツ</h2>
+<div class="clan-link">
+  <a href="https://clan-king-esport-production.up.railway.app/" class="clan-link">
+    للرجوع الى موقع الكلان اضغط هنا
+  </a>
+</div>
 <form id="orderForm">
   <input type="text" id="name" placeholder="الاسم داخل اللعبة" required />
   <input type="text" id="playerId" placeholder="ID اللاعب" required />
-  <input type="email" id="email" placeholder="البريد الإلكتروني" required />
+  <input type="email" id="email" placeholder="البريد الالكتروني للتواصل (لو قي مشكلة يعني)" required />
 
   <div class="section-title">اختر عدد الشدات:</div>
   <div id="ucOptions" class="options">
@@ -141,11 +164,12 @@
 
   <input type="text" id="transactionId" placeholder="رقم التحويل" required />
   <input type="text" id="totalAmount" placeholder="المبلغ الإجمالي" readonly />
-  <p style="color: orange; text-align: center;">قم بالتحويل إلى هذا الرقم: <strong>010216546351</strong></p>
+  <p style="color: orange; text-align: center;">قم بالتحويل إلى هذا الرقم: <strong>01274445091</strong></p>
 
   <button type="submit">إرسال الطلب</button>
 </form>
 
+<p style="text-align: center;"><a href="https://wa.me/201274445091" style="color: green; font-weight: bold;"><span>كلمنا واتساب لبيع الشعبية</span></a></p>
 <div class="contact">
   <h2>هل لديك استفسار؟</h2>
   <form id="contactForm">
@@ -202,23 +226,29 @@
       totalAmount: document.getElementById('totalAmount').value.replace(" جنيه", "")
     };
 
-    const res = await fetch("http://localhost:3000/api/order", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify(order)
-    });
+    try {
+      const res = await fetch("https://store-king-esport-production-9362.up.railway.app/api/order", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        credentials: "include",
+        body: JSON.stringify(order)
+      });
 
-    const result = await res.json();
-    if (result.success) {
-      alert("تم إرسال الطلب بنجاح ✅");
-      document.getElementById('orderForm').reset();
-      ucOptions.forEach(o => o.classList.remove('selected'));
-      bundleOptions.forEach(o => o.classList.remove('selected'));
-      selectedUC = null;
-      selectedBundle = null;
-      updateTotal();
-    } else {
-      alert("حدث خطأ، حاول مرة أخرى ❌");
+      const result = await res.json();
+      if (result.success) {
+        alert("تم إرسال الطلب بنجاح ✅");
+        document.getElementById('orderForm').reset();
+        ucOptions.forEach(o => o.classList.remove('selected'));
+        bundleOptions.forEach(o => o.classList.remove('selected'));
+        selectedUC = null;
+        selectedBundle = null;
+        updateTotal();
+      } else {
+        alert("حدث خطأ، حاول مرة أخرى ❌");
+      }
+    } catch (error) {
+      console.error("Error:", error);
+      alert("حدث خطأ في الاتصال بالسيرفر");
     }
   });
 
@@ -229,18 +259,24 @@
       message: document.getElementById('contactMessage').value
     };
 
-    const res = await fetch("http://localhost:3000/api/inquiry", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify(contact)
-    });
+    try {
+      const res = await fetch("https://store-king-esport-production-9362.up.railway.app/api/inquiry", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        credentials: "include",
+        body: JSON.stringify(contact)
+      });
 
-    const result = await res.json();
-    if (result.success) {
-      alert("تم إرسال الاستفسار وسيتم الرد عبر بريدك الإلكتروني.");
-      document.getElementById('contactForm').reset();
-    } else {
-      alert("حدث خطأ أثناء إرسال الاستفسار.");
+      const result = await res.json();
+      if (result.success) {
+        alert("تم إرسال الاستفسار وسيتم الرد عبر بريدك الإلكتروني.");
+        document.getElementById('contactForm').reset();
+      } else {
+        alert("حدث خطأ أثناء إرسال الاستفسار.");
+      }
+    } catch (error) {
+      console.error("Error:", error);
+      alert("حدث خطأ في الاتصال بالسيرفر");
     }
   });
 </script>
