--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -155,6 +155,32 @@
       opacity: 0.7;
       border-left: 4px solid #4CAF50;
     }
+
+    .screenshot-thumbnail {
+      max-width: 100px;
+      max-height: 100px;
+      cursor: pointer;
+      border: 1px solid #444;
+      border-radius: 5px;
+    }
+    
+    #screenshotModal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.9);
+      z-index: 1000;
+      text-align: center;
+    }
+    
+    #screenshotModal img {
+      max-width: 90%;
+      max-height: 90%;
+      margin-top: 5%;
+    }
   </style>
 </head>
 <body>
@@ -205,6 +231,10 @@
     </div>
   </div>
 
+  <div id="screenshotModal" onclick="this.style.display='none'">
+    <img id="modalImage">
+  </div>
+
   <script>
     let currentInquiryId = null;
     let currentInquiryEmail = null;
@@ -229,6 +259,12 @@
           <p><strong>الكمية:</strong> ${order.ucAmount || order.bundle}</p>
           <p><strong>المبلغ:</strong> ${order.totalAmount}</p>
           <p><strong>رقم التحويل:</strong> ${order.transactionId}</p>
+          ${order.screenshot ? `
+            <p><strong>إثبات الدفع:</strong></p>
+            <img src="${order.screenshot}" 
+                 onclick="openScreenshotModal('${order.screenshot}')"
+                 class="screenshot-thumbnail">
+          ` : ''}
           <p class="status"><strong>الحالة:</strong> ${order.status}</p>
           <button class="${order.status === 'تم الدفع' ? 'paid' : 'not-paid'}" 
                   onclick="updateStatus(${order.id}, '${order.status === 'تم الدفع' ? 'لم يتم الدفع' : 'تم الدفع'}')">
@@ -238,6 +274,11 @@
         `;
         container.appendChild(div);
       });
+    }
+
+    function openScreenshotModal(src) {
+      document.getElementById('modalImage').src = src;
+      document.getElementById('screenshotModal').style.display = 'block';
     }
 
     async function loadInquiries() {
